<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CharacterProfile">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:alpha="0.5"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/CharacterProfilePicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/character"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:id="@+id/headerInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/character_profile_short_info_background"
                android:text="@string/headerHeroInformation"
                android:textColor="@color/white"
                android:textSize="30dp"
                android:textAlignment="center"
                android:layout_marginBottom="20dp"/>

            <LinearLayout
                android:id="@+id/shortInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:background="@drawable/character_profile_short_info_background"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Name"
                        android:textColor="@color/white"
                        android:textSize="14dp"
                        android:layout_marginStart="10dp"/>
                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Kamael"
                        android:textColor="@color/white"
                        android:textSize="14dp"
                        android:layout_marginEnd="10dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Height"
                        android:textColor="@color/white"
                        android:textSize="14dp"
                        android:layout_marginStart="10dp"/>
                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="192cm"
                        android:textColor="@color/white"
                        android:textSize="14dp"
                        android:layout_marginEnd="10dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Weight"
                        android:textColor="@color/white"
                        android:textSize="14dp"
                        android:layout_marginStart="10dp"/>
                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="90kg"
                        android:textColor="@color/white"
                        android:textSize="14dp"
                        android:layout_marginEnd="10dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Years"
                        android:textColor="@color/white"
                        android:textSize="14dp"
                        android:layout_marginStart="10dp"/>
                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="?"
                        android:textColor="@color/white"
                        android:textSize="14dp"
                        android:layout_marginEnd="10dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Species"
                        android:textColor="@color/white"
                        android:textSize="14dp"
                        android:layout_marginStart="10dp"/>
                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="God"
                        android:textColor="@color/white"
                        android:textSize="14dp"
                        android:layout_marginEnd="10dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/RoleStr"
                        android:textColor="@color/white"
                        android:textSize="14dp"
                        android:layout_marginStart="10dp"/>
                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/support_white_border"
                        android:layout_marginEnd="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/SupportStr"
                        android:textColor="@color/white"
                        android:textSize="14dp"
                        android:layout_marginEnd="10dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ElementStr"
                        android:textColor="@color/white"
                        android:textSize="14dp"
                        android:layout_marginStart="10dp"/>
                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/earth_white_border"
                        android:layout_marginEnd="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/EarthStr"
                        android:textColor="@color/white"
                        android:textSize="14dp"
                        android:layout_marginEnd="10dp"/>
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Story"
                android:textSize="40dp"
                android:textColor="@color/black"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/loremIpsum"
                android:textSize="20dp"
                android:textColor="@color/black"/>

        </LinearLayout>

    </ScrollView>

</FrameLayout>